@@ -1,5 +1,10 @@
 Unreleased
 
+Fixed
+    Changing cluster member alias breaks UI (#234) (Slight caveat that the
+        node server wont return operations for a cluster member with an alias
+        that doesn't match the LXD server_name)
+
 Changed
     Used buttons instead of dropdown to change instance state
     Slight improvement to create container UX
